samples/_failures_safe/1761129703_179dc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e3a32d2.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_2e3a32d2.c:177:9: error: expected expression at end of input
  177 |         case TOKEN_OPERATOR: return
      |         ^~~~
./samples/SAFE/__tmp_2e3a32d2.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e3a32d2.c:177:9: error: expected declaration or statement at end of input
